# pyinsights

./: .envrc.sample  .gitignore  LICENSE  Makefile  README.md  mypy.ini  pylintrc  pyproject.toml
.github/workflows/: pull_request.yml  release.yml
examples/: pyinsights1.yml
pyinsights/: aws.py  cli.py  config.py  exceptions.py  formatter.py  helper.py  progress.py  pyinsights.py  query.py
pyinsights/cli/: options.py  writer.py
pyinsights/schema/: version_1.0.json
tests/: test_aws.py  test_cli.py  test_config.py  test_helper.py  test_progress.py  test_pyinsights.py  test_query.py  utils.py
tests/fixtures/config/correct/: config1.yml  config2.yml  config3.yml
tests/fixtures/config/invalid/: query_string2.yml  version.yml
tests/fixtures/invalid/: additional_property.yml  query_string1.yml
