[tool.poetry]
name = "pyinsights"
version = "0.3.0"
description = "AWS CloudWatch Logs Insights is wrapped by Python"
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["aws", "insights", "cli"]
packages =[
  { include = "pyinsights" }
]
repository = "https://github.com/homoluctus/pyinsights"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
boto3 = "^1.10.45"
pyyaml = "^5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
mypy = "^0.761"
autopep8 = "^1.4.4"
pycodestyle = {git = "https://github.com/PyCQA/pycodestyle.git", rev = "master"}

[tool.poetry.scripts]
pyinsights = "pyinsights.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
