[tool.poetry]
name = "pyinsights"
version = "0.3.2"
description = "AWS CloudWatch Logs Insights is wrapped by Python"
authors = ["homoluctus <w.slife18sy@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["aws", "insights", "cli"]
packages =[
  { include = "pyinsights" }
]
repository = "https://github.com/homoluctus/pyinsights"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
boto3 = "^1.10.45"
pyyaml = "^5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.3"
mypy = "^0.761"
pytest-cov = "^2.8.1"
pylint = "^2.4.4"
black = {git = "https://github.com/psf/black.git", rev = "master"}

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.poetry.scripts]
pyinsights = "pyinsights.cli:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
